<resources>
    <string name="app_name">Pizza Party</string>
    <string name="total_pizzas_results">Total pizzas: %d</string>
    <string name="number_of_people">Number of people?</string>
    <string name="_10">10</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="pizza_size">Pizza Size?</string>
    <string name="ssmall">Small</string>
    <string name="smedium">Medium</string>
    <string name="slarge">Large</string>
    <string name="calculate">Calculate</string>
    <string name="total_pizzas">Total pizzas: %d</string>
    <string name="pizza_background">Pizza Background</string>

</resources>