<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <ImageView
        android:id="@+id/pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/pizza_background"
        android:scaleType="fitEnd"
        android:src="@drawable/pizza"
        app:layout_constraintStart_toStartOf="@+id/calc_button"
        app:layout_constraintTop_toBottomOf="@+id/calc_button"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_people"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:hint="@string/_10"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/num_attend_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/num_attend_edit_text" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/ravenous" />

    </RadioGroup>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/pizza_size"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/hungry_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/pizza_size_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/small_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/medium_size_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/large_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>


    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_pizzas"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pizza_size_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/pizza_size_radio_group" />

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateClick"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@+id/num_pizzas_text_view"
        app:layout_constraintTop_toBottomOf="@+id/num_pizzas_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>